--- a/css/column_styles.css
+++ b/css/column_styles.css
@@ -32,7 +32,7 @@ img {
   margin-right: 20px; /* Add some spacing between the image and text */
 }
 
-.hanging-indent span{
+.hanging-indent > span {
   display: inline-block;
 }
 
